<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMenuFragment"
    android:background="@color/background">

    <!-- TODO:画像が小さい際に中央寄せにならない -->
    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/imageUser"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="コーユータロウ" />

    <Button
        android:id="@+id/btn_user_menu_0"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_8"
        android:nextFocusRight="@+id/btn_user_menu_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_1"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_0"
        android:nextFocusRight="@+id/btn_user_menu_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_2"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="435dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_1"
        android:nextFocusRight="@+id/btn_user_menu_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_user_menu_3"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_2"
        android:nextFocusRight="@+id/btn_user_menu_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_4"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_3"
        android:nextFocusRight="@+id/btn_user_menu_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_5"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="435dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_4"
        android:nextFocusRight="@+id/btn_user_menu_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_user_menu_6"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_5"
        android:nextFocusRight="@+id/btn_user_menu_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_7"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_6"
        android:nextFocusRight="@+id/btn_user_menu_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_user_menu_8"
        android:layout_width="190dp"
        android:layout_height="75dp"
        android:layout_marginStart="435dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/user_menu_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        android:nextFocusLeft="@+id/btn_user_menu_7"
        android:nextFocusRight="@+id/btn_user_menu_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>