<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@color/background">

    <Button
        android:id="@+id/btn_demo_const_login"
        android:layout_width="183dp"
        android:layout_height="139dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/demo_const_login_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_demo_cloud_login"
        android:layout_width="183dp"
        android:layout_height="139dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/demo_cloud_login_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@drawable/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="@string/app_name" />

</android.support.constraint.ConstraintLayout>